# ZuruGuru

./: pyproject.toml  seed.py  zuru_guru.db
app/: database.py  main.py  models.py  websocket.py
app/routes/: api.py  views.py
static/css/: style.css
static/js/: admin.js  visitor_map.js
templates/: admin_base.html  admin_pois.html  admin_security.html  base.html  guide.html  index.html
