[project]
name = "zg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.135.1",
    "geoalchemy2>=0.18.4",
    "jinja2>=3.1.6",
    "psycopg2-binary>=2.9.11",
    "python-multipart>=0.0.22",
    "sqlalchemy>=2.0.48",
    "uvicorn>=0.41.0",
]
